css/style.css
/* ... */
.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}
/*--------------------------------------------------------------------HEADER----------------------------------------------------------------------------------------------------------------------------------------*/
.header{
    display: flex;
    justify-content: space-between;
    height: 100px;
}

.div-logo{
    display: flex;
    align-items: center;
}

.logo{
    height: 28px;
    width: 80px;
}

.navigation{
    width: 250px;
    display: flex;
    justify-content: space-between;
    align-content: center;
}

.nav{
    height: 100%;
    border-top: #0065fc00 solid 2px;
    line-height: 3em;
}

.nav:hover{
    border-top: var(--main-color) solid 2px;
}
/*--------------------------------------------------------------------------------HEADER MAIN-------------------------------------------------------------------------*/
.titre-header-main{
    margin-bottom: 5px;
}

.texte-header-main{
    margin-top: 4px;
}

.barre-de-recherche{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: 45px;
    margin-bottom: 30px;
    margin-top: 35px;
  
}

.icon-localisation{
    display: block;
    width: 50px;
    height: 44px;
    border-top-left-radius: 15px ;
    border-bottom-left-radius: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--main-bg-color);
    border: var(--main-bg-color) solid 1px;
    
}

.fa-location-dot{
    color: black;
}

.input-recherche{
    height: 45px;
    width: 160px;
    padding: 2px;
    box-sizing: border-box;
    border-left: none;
    border-right: none;
    border-top: var(--main-bg-color) solid 1px;
    border-bottom:var(--main-bg-color) solid 1px;
}

.bouton-rechercher{
    height: 44px;
    width: 150px;
    font-family: 'Raleway', sans-serif;
    font-weight: bolder;
    font-size: 1em;
    background-color:var(--main-color);
    color: white;
    border: var(--main-color) solid 1px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
}

.bouton-rechercher-logo{
    display: none;
    height: 44px;
    width: 150px;
    background-color:var(--main-color);
    border: var(--main-color) solid 1px;
    border-radius: 15px;
}

.fa-magnifying-glass{
    color: white;
    font-size: larger;
    font-weight: bolder;
}

.filtres{
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.div-bouton-filtre{
    display: flex;
    flex-direction: row;
}

.bouton-filtre{
    display: flex;
    flex-direction: row;
    align-items: center;
    border: #D9D9D9 solid 2px;
    border-radius: 30px;
    padding-left: 10px;
    padding-right: 15px;
    margin-left: 20px;
    margin-bottom: 15px;
    width: fit-content;
    height: 45px;
    box-sizing: border-box;
    background-color: white;
}

.logo-filtre{
   font-size: large;
   margin-left: 5px;
}

.text-bouton-filtre{
    margin-left: 10px;
    font-weight: bold;
    
}

.bouton-filtre:hover{
    background-color: var(--filter-bg-color);
}

.div-info{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 2%;
}

.fa-info{
    font-size: smaller;
}

.border-radius-logo-info{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 20px;
    width: 20px;
    border: 2px solid var(--main-bg-color);
    border-radius: 60%;
    margin-right: 1%;
}
/*----------------------------------------------------------------------------------HEBERGEMENTSANDPOPULAIRES-------------------------------------------------------------------------------------------------------------------------------------------------------*/
/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.liste-card-hebergement{
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
}

.card-hebergement{
    width: 30%;
    height: 225px;
    margin-top: 20px;
    background-color: white;
    border-radius: 20px;
    padding-left: 6px;
    padding-right: 6px;
    padding-top: 6px;
    box-sizing: border-box;
    box-shadow: 0px 1px 20px #D9D9D9;

}

.img-card-hebergement{
    width: 100%;
    height: 110px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    object-fit: cover;
}

.titre-card-hebergement{
    margin-top: 7px;
    margin-bottom: 7px;
    font-size: 0.9em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.text-card-hebergement{
    margin-top: 0px;
    margin-bottom: 7px;
}

.bouton-hebergement{
    font-weight: bolder;
    font-size: 1.2em;
    border: none;
}

.text-bouton-hebergement{
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
    margin: none;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}
/* ... */

